# relay

./: .env  .gitignore  Cargo.toml  Cross.toml  compose.dev.yml  compose.yml  install.ps1  install.sh  readme.md  techTodo.md
.github/workflows/: build-cli.yml  build-frontend.yml  build-rust.yml  build.yml  release.yml
crates/app/: Dockerfile  components.json  package.json
crates/app/src/: hooks.server.ts
crates/app/src/lib/components/: relay-logo.svelte
crates/app/src/lib/components/ui/dropdown-menu/: dropdown-menu-checkbox-item.svelte  dropdown-menu-radio-item.svelte  dropdown-menu-sub-trigger.svelte
crates/app/src/lib/server/: auth.ts
crates/app/src/lib/server/db/: auth.schema.ts  index.ts  relay.schema.ts  schema.ts
crates/app/src/routes/: +layout.svelte  +page.server.ts  +page.svelte  layout.css
crates/app/src/routes/admin/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
crates/app/src/routes/admin/domains/: +page.server.ts  +page.svelte
crates/app/src/routes/admin/users/: +page.server.ts  +page.svelte
crates/app/src/routes/api/internal/auth/cli/: +server.ts
crates/app/src/routes/api/internal/auth/relay/: +server.ts
crates/app/src/routes/api/internal/info/: +server.ts
crates/app/src/routes/api/internal/port/: +server.ts
crates/app/src/routes/api/relay/: +server.ts
crates/app/src/routes/dashboard/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
crates/app/src/routes/login/: +page.server.ts  +page.svelte  login-form.svelte
crates/app/src/routes/register/: +page.server.ts  +page.svelte  register-form.svelte
crates/backend/: Cargo.toml  build.rs
crates/backend/src/: error.rs  http.rs  main.rs
crates/backend/src/routes/: mod.rs
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: auth.rs  client.rs  config.rs  main.rs
crates/common/: Cargo.toml
crates/common/src/: connection.rs  constants.rs  lib.rs  messages.rs  worker.rs
crates/common/src/model/: http.rs  mod.rs  relay.rs  tcp.rs
crates/relay/: Cargo.toml  Dockerfile
crates/relay/src/: auth.rs  http_proxy.rs  main.rs  server.rs
