[workspace]
members = ["crates/common", "crates/relay", "crates/cli"]
resolver = "3"

[workspace.lints.rust]
unused = { level = "deny", priority = -1 }
private_bounds = "allow"
deprecated = "warn"
nonstandard-style = "deny"
let-underscore = "allow"
refining-impl-trait = "deny"
keyword-idents = "deny"
future-incompatible = "deny"

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

implicit_return = "allow"
field_scoped_visibility_modifiers = "allow"
single_call_fn = "allow"
question_mark_used = "allow"
mod_module_files = "allow"
self_named_module_files = "allow"
ref_patterns = "allow"
pattern_type_mismatch = "allow"
iter_over_hash_type = "allow"
inline_always = "allow"
absolute_paths = "allow"
std_instead_of_alloc = "allow"
used_underscore_binding = "allow"
exhaustive_enums = "allow"
exhaustive_structs = "allow"
missing_inline_in_public_items = "allow"
missing_trait_methods = "allow"
partial_pub_fields = "allow"
pub_use = "allow"
single_char_lifetime_names = "allow"
use_debug = "allow"
needless_raw_strings = "allow"
arbitrary_source_item_ordering = "allow"
module_name_repetitions = "allow"
wildcard_imports = "allow"
impl_trait_in_params = "allow"
float_arithmetic = "allow"
single_match_else = "allow"
missing-assert-message = "allow"

significant_drop_in_scrutinee = "forbid"

renamed_function_params = "allow"

# only deny instead of forbid because of autogenerated code
min_ident_chars = "deny"

# Horror with match on ErrorKind
wildcard_enum_match_arm = "allow"

let_underscore_must_use = "allow"
let_underscore_untyped = "allow"

todo = "warn"
unimplemented = "allow"

shadow_reuse = "allow"
shadow_unrelated = "allow"

pub_with_shorthand = "allow"
pub_without_shorthand = "forbid"

unseparated_literal_suffix = "allow"
separated_literal_suffix = "forbid"

semicolon_inside_block = "allow"
semicolon_outside_block = "deny"

# For now, deny later
missing_docs_in_private_items = "allow"
allow_attributes_without_reason = "allow"
too_many_lines = "allow"
unwrap_in_result = "allow"
expect_used = "allow"
as_conversions = "allow"
cast_possible_truncation = "allow"
cognitive_complexity = "allow"
multiple_inherent_impl = "allow"
# Caused by the tokio select macro, remove after fixed
integer_division_remainder_used = "allow"
redundant_pub_crate = "allow"

# For now, deny later, DOC
missing_errors_doc = "allow"
missing_panics_doc = "allow"


# Restriction
allow_attributes = "deny"
arithmetic_side_effects = "deny"
as_pointer_underscore = "deny"
assertions_on_result_states = "deny"
cfg_not_test = "deny"
clone_on_ref_ptr = "deny"
create_dir = "deny"
dbg_macro = "deny"
decimal_literal_representation = "deny"
default_numeric_fallback = "deny"
default_union_representation = "deny"
deref_by_slicing = "deny"
disallowed_script_idents = "deny"
doc_include_without_cfg = "deny"
else_if_without_else = "deny"
empty_drop = "deny"
empty_enum_variants_with_brackets = "deny"
empty_structs_with_brackets = "deny"
error_impl_error = "deny"

# Should never be part of the code
exit = "forbid"

filetype_is_file = "deny"
float_cmp_const = "deny"
fn_to_numeric_cast_any = "deny"
get_unwrap = "deny"
if_then_some_else_none = "deny"
indexing_slicing = "deny"
infinite_loop = "deny"
inline_asm_x86_att_syntax = "deny"
inline_asm_x86_intel_syntax = "deny"
integer_division = "deny"
large_include_file = "deny"
lossy_float_literal = "deny"
map_err_ignore = "deny"
map_with_unused_argument_over_ranges = "deny"
mem_forget = "deny"
missing_assert_message = "deny"
missing_asserts_for_indexing = "deny"
mixed_read_write_in_expression = "forbid"
modulo_arithmetic = "deny"
multiple_unsafe_ops_per_block = "deny"
mutex_atomic = "deny"
mutex_integer = "deny"
non_ascii_literal = "deny"
non_zero_suggestions = "deny"
panic = "deny"
panic_in_result_fn = "deny"
pathbuf_init_then_push = "deny"
# pointer_format = "deny" # Not found by clippy?
precedence_bits = "deny"
print_stderr = "deny"
print_stdout = "deny"
rc_buffer = "forbid"
rc_mutex = "forbid"
redundant_test_prefix = "deny"
redundant_type_annotations = "deny"
rest_pat_in_fully_bound_structs = "deny"
return_and_then = "deny"
same_name_method = "deny"
shadow_same = "deny"
std_instead_of_core = "deny"
str_to_string = "deny"
string_add = "deny"
string_lit_chars_any = "deny"
string_slice = "deny"
implicit_clone = "forbid"
suspicious_xor_used_as_pow = "deny"
tests_outside_test_module = "deny"
try_err = "deny"
undocumented_unsafe_blocks = "deny"
unnecessary_safety_comment = "deny"
unnecessary_safety_doc = "deny"
unnecessary_self_imports = "deny"
unneeded_field_pattern = "deny"
unreachable = "allow"
unused_result_ok = "deny"
unused_trait_names = "deny"
unwrap_used = "deny"
verbose_file_reads = "deny"
alloc_instead_of_core = "deny"


big_endian_bytes = "deny"
host_endian_bytes = "deny"
little_endian_bytes = "deny"


[workspace.dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["color", "derive"] }
reqwest = { version = "0.13.4", features = [ "charset",
    "http2",
    "json",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json  = { version = "1.0.150", features = ["preserve_order"] }
toml = { version = "1.1.2", features = ["serde"] }

tokio = { version = "1.52.3", features = ["full"] }
tokio-util = "0.7.18"
url = { version = "2.5.8", features = ["serde"] }
http = "1.4.1"
futures-util = { version = "0.3.32", features = ["sink"] }

rustls = "0.23.40"
tokio-rustls = "0.26.4"

tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15.7"
uuid = { version = "1.23.2", features = ["serde", "v4"] }

postcard = { version = "1", features = ["alloc"] }
bytes = "1.11.1"

[workspace.dependencies.relay_common]
path = "crates/common"

[workspace.dependencies.axum-server]
version = "0.8.0"
features = ["tls-rustls"]

[workspace.dependencies.axum]
version = "0.8.8"
features = ["json", "macros", "http2", "ws"]

[workspace.dependencies.axum-extra]
version = "0.12.5"
features = ["cookie", "typed-header"]

[workspace.dependencies.tower]
version = "0.5.3"
features = ["full"]

[workspace.dependencies.tower-http]
version = "0.6.11"
features = [
    "cors",
    "auth",
    "trace",
    "compression-zstd",
    "compression-br",
    "compression-gzip",
]

[workspace.dependencies.chrono]
version = "0.4.45"
features = ["serde"]
