[package]
name = "relay_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
sqlx.workspace = true
rustls.workspace = true
axum.workspace = true
axum-server.workspace = true
serde_json.workspace = true
serde.workspace = true
toml.workspace = true
tokio.workspace = true
reqwest.workspace = true
tower.workspace = true
tower-http.workspace = true
http.workspace = true
dotenvy.workspace = true