[package]
name = "relay_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
relay_common.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
rand = { version = "0.10.1", features = ["std"] }
dirs = "6.0.0"
toml.workspace = true
serde.workspace = true

[dependencies.clap]
version = "4.6.1"
features = ["color", "env", "derive"]