[package]
name = "relay_common"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json.workspace = true
serde.workspace = true
toml.workspace = true
tokio.workspace = true
reqwest.workspace = true
uuid.workspace = true
anyhow.workspace = true
futures-util.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
postcard.workspace = true
bytes.workspace = true