[package]
name = "relay"
version = "0.1.0"
edition = "2024"



[dependencies]
anyhow.workspace = true
tokio.workspace = true
relay_common.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
rustls.workspace = true
serde.workspace = true
uuid.workspace = true
reqwest.workspace = true
fastrand = "2.4.1"
dashmap = "6.2.1"
serde_json.workspace = true
axum.workspace = true