[package]
name = "relay"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
relay_common.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
rustls.workspace = true
serde.workspace = true
uuid.workspace = true
reqwest.workspace = true
serde_json.workspace = true

fastrand = "2.4.1"
mimalloc = { version = "0.1", default-features = false }
dashmap = "6.2.1"
hyper = { version = "1.10.1", features = ["full", "server", "client", "http1", "http2"] }
hyper-util = { version = "0.1.20", features = ["full"] }
http-body-util = "0.1.3"
base64 = "0.22.1"
tokio-rustls = "0.26.4"
rcgen = "0.14.8"
rustls-pki-types = "1.14.1"
subtle = "2.6.1"
